turn_lexer_derive/test/test05-reject_explicit_discriminant.stderr
error: Lexer enum variants must not define an explicit discriminant.
 --> $DIR/test05-reject_explicit_discriminant.rs:9:5
  |
9 |     Two = 5,
  |     ^^^
